tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__BakedPotatoes-AAAAAAAAAAAAAAAAAAABug==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 442,
  "prerequisites": [
    9
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Eating raw potatoes isn't that healthy, as you might have noticed. Some potatoes are green and poisonous already. After you get a furnace you can make delicious baked potatoes as another food alternative. Put a baked potato on a stick to make it even more delicious.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§l\"Baked\" Potatoes",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    9
  ],
  "rewards": [],
  "tasks": []
}
