tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__BambooFence-AAAAAAAAAAAAAAAAAAADsg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 946,
  "prerequisites": [
    3
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Maybe you're lucky and started in a bamboo forest. Bamboo is a very useful tree since it grows really fast and when you break the bottom-most block, the whole thing comes apart.\n\nYou can use them as sticks, or you can place the bamboo sticks to grow and make a three-block-tall wall to protect your base. You can also use Berry Bushes for that, assuming you don't want to spend materials on fences.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lBamboo Fence",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3
  ],
  "rewards": [],
  "tasks": []
}
