tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__CaughtintheWeb-AAAAAAAAAAAAAAAAAAAHMw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1843,
  "prerequisites": [
    1842
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some spider have nasty modifiers:\n\nWitch spiders reflect missile damage back at you. If you see a red X on their back, draw your melee weapon and prepare for close combat...\n\nMother spiders will spawn a lot of baby spiders on death, some of which may be infernal.\n\nA flying spider can grab the oblivious flier.\n\nGhost spiders are partially invisible and can pass through thin walls.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lCaught in the Web",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1842
  ],
  "rewards": [],
  "tasks": []
}
