tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__CowsAreSupposedt-AAAAAAAAAAAAAAAAAAAFww==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1475,
  "prerequisites": [
    10
  ],
  "properties": {
    "auto_claim": false,
    "desc": "What the...? You noticed that sometimes when you kill something, even a cow or chicken, it explodes! What madness!\n\nTo stop it, use a proper GregTech Knife or Butchery Knife to kill them. Craft a flint GregTech knife with a stick and a piece of flint.\n\nTo see its recipe, see how a generic knife is made - NEI should show you many pages. The recipe you need should be on the last page. You can scroll pages with your mouse wheel.\n\n[note]Alternatively you can use the search bar to search for a specific tool material, in this case flint![/note]\n\nAs a reward, here's an iron knife to use once the flint one wears out.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§9§lCows Are Supposed to Moo!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    10
  ],
  "rewards": [],
  "tasks": []
}
