tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__CraftingTime-AAAAAAAAAAAAAAAAAAAEtA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1204,
  "prerequisites": [
    1
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's time to get yourself a 3x3 crafting area. Use your flint and some wood to build one!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lCrafting Time",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1
  ],
  "rewards": [],
  "tasks": []
}
