tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AndSoItBegins-AAAAAAAAAAAAAAAAAAAAAA==__FireFireGrandpa-AAAAAAAAAAAAAAAAAAAACQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 9,
  "prerequisites": [
    8
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Time to burn some stuff, isn't it? You can't make charcoal in it, but you sure will find some usage for it soon™.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§9§lFire, Fire, Grandpa!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    8
  ],
  "rewards": [],
  "tasks": []
}
